// Copyright (c) 2019. Ontario Institute for Cancer Research
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package program_service;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.icgc.argo.program_service.proto";
option java_outer_classname = "ProgramServiceProto";
option objc_class_prefix = "PSP";

service ProgramService {

  rpc CreateProgram (CreateProgramRequest) returns (CreateProgramResponse);
  rpc RemoveProgram (RemoveProgramRequest) returns (google.protobuf.Empty);
  rpc UpdateProgram (UpdateProgramRequest) returns (UpdateProgramResponse);
  rpc ListPrograms (google.protobuf.Empty) returns (ListProgramsResponse);
  rpc GetProgram (GetProgramRequest) returns (GetProgramResponse);

  rpc InviteUser(InviteUserRequest) returns (InviteUserResponse);
  rpc GetJoinProgramInvite(GetJoinProgramInviteRequest) returns (GetJoinProgramInviteResponse);
  rpc JoinProgram(JoinProgramRequest) returns (JoinProgramResponse);

  rpc RemoveUser (RemoveUserRequest) returns (RemoveUserResponse);
  rpc ListUsers (ListUserRequest) returns (ListUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty);

}

message Program {
  google.protobuf.StringValue short_name = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.StringValue name = 3;
  MembershipTypeValue membership_type = 4;
  google.protobuf.Int32Value commitment_donors = 5;
  google.protobuf.Int32Value submitted_donors = 6;
  google.protobuf.Int32Value genomic_donors = 7;
  google.protobuf.StringValue website = 8;
  repeated string cancer_types = 12;
  repeated string primary_sites = 13;
  repeated string institutions = 14;
  repeated string countries = 15;
  repeated string regions = 16;
}

enum MembershipType {
  FULL = 0;
  ASSOCIATE = 1;
}

message MembershipTypeValue {
  MembershipType value = 1;
}

enum UserRole {
  COLLABORATOR = 0;
  ADMIN = 1;
  CURATOR = 2;
  SUBMITTER = 3;
  BANNED = 4;
}

message UserRoleValue {
  UserRole value = 1;
}

message User {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue first_name = 2;
  google.protobuf.StringValue last_name = 3;
  UserRoleValue role = 4;
}

enum InviteStatus {
  REVOKED = 0;
  PENDING = 1;
  ACCEPTED = 2;
  EXPIRED  = 3;
}

message InviteStatusValue {
  InviteStatus value = 1;
}

message UserDetails {
  User user = 1;
  InviteStatusValue status = 2;
  google.protobuf.Timestamp accepted_at = 3;
}

message CreateProgramRequest {
  Program program = 1;
  repeated User admins = 3;
}

message CreateProgramResponse {
  google.protobuf.Timestamp created_at = 1;
}

message UpdateProgramRequest {
  Program program = 1;
}

message UpdateProgramResponse {
  google.protobuf.Timestamp updated_at = 1;
}

message ProgramDetails {
  Program program = 1;
  Metadata metadata = 2;
}

message Metadata {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp updated_at = 2;
}

message GetProgramRequest {
  google.protobuf.StringValue short_name = 1;
}

message GetProgramResponse {
  ProgramDetails program = 1;
}

message ListProgramsResponse {
  repeated ProgramDetails programs = 1;
}

message RemoveUserRequest {
  google.protobuf.StringValue user_email = 1;
  google.protobuf.StringValue program_short_name = 2;
}

message RemoveUserResponse {
  google.protobuf.StringValue message = 1;
}

message ListUserRequest {
  google.protobuf.StringValue program_short_name = 1;
}

message ListUserResponse {
  repeated UserDetails userDetails = 1;
}

message UpdateUserRequest {
  google.protobuf.StringValue user_email= 1;
  UserRoleValue role = 2;
  google.protobuf.StringValue short_name = 3;
}

message InviteUserRequest {
  google.protobuf.StringValue program_short_name = 1;
  google.protobuf.StringValue first_name = 2;
  google.protobuf.StringValue last_name = 3;
  google.protobuf.StringValue email = 4;

  // Role of the user
  UserRoleValue role = 5;
}

message InviteUserResponse {
  // The invite id of the invitation which is
  // sent to the user by email
  google.protobuf.StringValue invite_id = 1;
}

message JoinProgramRequest {
  // The invitation id which is received by the user from email
  google.protobuf.StringValue join_program_invitation_id = 1;

  // The institute where the user belong
  google.protobuf.StringValue institute = 2;

  // First name of the affiliate principal investigator
  google.protobuf.StringValue affiliate_pi_first_name = 3;

  // last name name of the affiliate principal investigator
  google.protobuf.StringValue affiliate_pi_last_name = 4;

  // The department of the user
  google.protobuf.StringValue department = 5;
}

message Invitation {
  google.protobuf.StringValue id = 1;
}

message JoinProgramResponse {
  User user = 1;
}

message RemoveProgramRequest {
  google.protobuf.StringValue program_short_name = 1;
}

message GetJoinProgramInviteRequest {
  google.protobuf.StringValue invite_id = 1;
}

message JoinProgramInvite {
  google.protobuf.StringValue id = 1;

  google.protobuf.Timestamp created_at = 2;

  google.protobuf.Timestamp expires_at = 3;

  google.protobuf.Timestamp accepted_at = 4;

  Program program = 5;

  google.protobuf.StringValue user_email = 6;

  google.protobuf.StringValue first_name = 7;

  google.protobuf.StringValue last_name = 8;

  UserRole role = 9;

  google.protobuf.BoolValue emailSent = 10;

  InviteStatus status = 11;
}

message GetJoinProgramInviteResponse {
  JoinProgramInvite invitation = 1;
}
